# cvdl-rs

./: Cargo.toml  README.md  cvdl.md  output.md  output.txt  pdfdump.txt  pdfdump2.txt
data/: data-schemas.json  layout-schemas.json  resume-layout.json  resume.json  resume2.json  text-layout-schemas.json
docs/: CVDL.md
src/: alignment.rs  any_layout.rs  ascii_layout_schema.rs  basic_layout.rs  cli.rs  container.rs  data_schema.rs  document.rs  element.rs  font.rs  layout.rs  layout_schema.rs  lib.rs  local_storage.rs  main.rs  margin.rs  pdf_layout.rs  pdf_layout_schema.rs  png_layout.rs  point.rs  resume_data.rs  resume_layout.rs  spatial_box.rs  text_layout_schema.rs  width.rs
