[package]
name = "cvdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = "0.5.3"
rusttype = "0.9.3"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
serde_with = "3.1.0"

[dev-dependencies]
expect-test = "1.4.1"